视图层修整完毕
